# profile.wearable.platform.core.uifw.elm-demo-tizen-wearable

./: CMakeLists.txt  org.tizen.elm-demo-tizen-wearable.manifest  org.tizen.elm-demo-tizen-wearable.xml  org.tizen.elm-demo-tizen-wearable.xml.in  project.config
inc/: main.h
packaging/: elm-demo-tizen-wearable.spec
src/: bg.c  button.c  check.c  eext_datetime.c  eext_genlist.c  eext_more_option.c  eext_progressbar.c  eext_rotary_selector.c  eext_scroller.c  eext_slider.c  eext_spinner.c  entry.c  genlist.c  image.c  index.c  layout.c  main.c  map.c  popup.c  progressbar.c  radio.c  scroller.c
